@@ -138,6 +138,8 @@
   include file and line in trace). (Felipe)
 - Fixed bug #49730 (Firebird - new PDO() returns NULL). (Felipe)
 - Fixed bug #49723 (LimitIterator with empty SeekableIterator). (Etienne)
+- Fixed bug #49687 (utf8_decode vulnerabilities and deficiencies in the number
+  of reported malformed sequences). (CVE-2010-3870) (Gustavo)
 - Fixed bug #49576 (FILTER_VALIDATE_EMAIL filter needs updating) (Rasmus)
 - Fixed bug #49320 (PDO returns null when SQLite connection fails). (Felipe)
 - Fixed bug #49267 (Linking fails for iconv). (Moriyosh)
